--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,11 @@
 <h1> SignUp Here </h1>
+<% if @user.errors.any? %>
+<ul>
+    <% @user.errors.full_messages.each do |f| %>
+         <li><%= f %></li>
+    <% end %>
+</ul>
+<% end %>
 
 <%= form_with(model: @user, local: true) do |f| %>
     <p>
