--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -67,7 +67,7 @@ input[type=text], input[type=date] {
         <th>Flight_id</th>
         <th>Source</th>
         <th>Destination</th>
-        <th>No of Seats</th>
+        <th>Time</th>
         <th>Price </th>
         <th></th>
     </tr>
