--- a/app/views/flights/booking.html.erb
+++ b/app/views/flights/booking.html.erb
@@ -14,8 +14,8 @@
     <li class="list-group-item">Flight No. : <%= @flight.id %></li>
     <li class="list-group-item">From: <%= @flight.source %></li>
     <li class="list-group-item">To: <%= @flight.destination %></li>
-    <li class="list-group-item">Reamining Seats : <%= @flight.noofseat %></li>
     <li class="list-group-item">Date : <%= session[:doj].split('-').reverse().join('-') %></li>
+    <li class="list-group-item">Time : <%= @flight.time.to_time.strftime("%I:%M %p") %></li>
    <!-- <%= form_with(scope: :user_travels, url: flight_path, local: true) do |f| %>  
     <li class="list-group-item">No Of Seat :  <%= f.number_field :noofseat, max: 10, min: 1 %></li>
   </ul><br><br>
@@ -26,7 +26,7 @@
 
 <li class="list-group-item"> <%= form_with(scope: :user_travels, url: flight_path, local: true) do |f| %>
     <%= hidden_field_tag(:flight_id, @flight.id) %>
-    <%= f.label  :noofseat %>
+    <h6 style="display:inline">No of Passengers : </h6>
     <%= f.number_field :noofseat, required: true %>
 <%= f.submit 'Book', class: 'btn btn-primary btn-sm'%>
 <% end %></li>
