--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,5 +1,5 @@
 <style>
-input[type=text], input[type=date] {
+input[type=text], input[type=date], select {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -19,7 +19,7 @@ input[type=text], input[type=date] {
     border-radius: 5px 5px 5px 5px;
   }
   
-  input[type=text]:focus , input[type=date]:focus{
+  input[type=text]:focus , input[type=date]:focus, select:focus{
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
   }
@@ -49,10 +49,12 @@ input[type=text], input[type=date] {
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container" style="text-align: center;" >
-    <%= form_tag(root_path, :method => "get") do %>
-  <div class="labels1">From :</div> <%= text_field_tag(:source, nil, :required => true)  %>
-  <div class="labels1">To :</div><%= text_field_tag(:destination, nil, :required => true) %>
-   <%= date_field_tag(:doj, nil, :required => true) %>
+    <%= form_with(url: root_path, local: true) do |f| %>
+  <div class="labels1">From :</div> <%= f.select(:source, options_for_select([['Chennai','Chennai'],['Madurai','Madurai'],['Delhi','Delhi']]))  %>
+  <div class="labels1">To :</div> <%= f.select(:destination, options_for_select([['Mumbai','Mumbai'],['Madurai','Madurai'],['Chennai','Chennai'],['Delhi','Delhi']]))  %>
+  <%= date_field_tag(:doj, nil, :required => true, :min => "2020-08-23", :max => "2020-08-25") %>
+  <!--<div class="labels1">To :</div><%= text_field_tag(:destination, nil, :required => true) %>
+   -->
   <%= submit_tag("Search", class: "btn btn-primary btn-lg") %>
 <% end %>
 <br><br>
@@ -77,12 +79,15 @@ input[type=text], input[type=date] {
     <td><%= f.id %></td>
     <td><%= f.source %></td>
     <td><%= f.destination %></td>
-    <td><%= f.noofseat %></td>
+    <td><%= f.time.to_time.strftime("%I:%M %p") %></td>
     <td><%= f.price %></td>
     <td><%= link_to "<button class=\"btn btn-primary\">Book</button>".html_safe, flight_path(f)  %> </td>
     </tr>
 
     <% end %>
+    <% else%>
+      <h3 style=><%= @msg %></h3>
     <% end %>
+
 </table>  
 </div>
